# WorkflowBench

./: .gitignore  CHANGELOG.md  LICENSE  README.md  docs.html  index.html  pyproject.toml
.github/workflows/: publish-pypi.yml
assets/: style.css
cases/: acc-001.yaml  acc-002.yaml  acc-003.yaml  acc-004.yaml  apr-001.yaml  apr-002.yaml  apr-003.yaml  apr-004.yaml  esc-001.yaml  esc-002.yaml  esc-003.yaml  not-001.yaml  not-002.yaml  onb-001.yaml  onb-002.yaml  onb-003.yaml  onb-004.yaml  pol-001.yaml  pol-002.yaml  pol-003.yaml  pol-004.yaml
demo_reports/: comparison_bad_vs_good.md  report_demo-bad-v1.html  report_demo-bad-v1.md  report_demo-good-v2.html  report_demo-good-v2.md  run_demo-bad-v1.json  run_demo-good-v2.json
scripts/: generate_demo.py  release.py
tests/: test_compare.py  test_reporter.py  test_runner.py  test_schema.py  test_scorers.py
workflowbench/: __init__.py  __main__.py  adapters.py  cli.py  compare.py  reporter.py  runner.py  schema.py  scorers.py
